# blzde

./: .gitignore  Cargo.toml  README.md  crates.io_version_check.sh  rustfmt.toml
.github/workflows/: crates.yml
benches/: basic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserialize_smoke_test.rs  roundtrip.rs
src/: de.rs  lib.rs  ser.rs  tests.rs
src/schema/: buf.rs  formats.rs  mod.rs  ser.rs  storage.rs
